objects/ASI_MFM_PO_Receipt_Phasing__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Allocated_Amount_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Allocated_Amount_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Allocated_Amount_12__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_Total__c</fullName>
        <formula>ASI_MFM_Allocated_Amount_1__c+ASI_MFM_Allocated_Amount_2__c+ASI_MFM_Allocated_Amount_3__c+ASI_MFM_Allocated_Amount_4__c+ASI_MFM_Allocated_Amount_5__c+ASI_MFM_Allocated_Amount_6__c+ASI_MFM_Allocated_Amount_7__c+ASI_MFM_Allocated_Amount_8__c+ASI_MFM_Allocated_Amount_9__c+ASI_MFM_Allocated_Amount_10__c+ASI_MFM_Allocated_Amount_11__c+ASI_MFM_Allocated_Amount_12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Auto_Receipt_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Receipt Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Create_Date__c</fullName>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Last_Receipt_Date__c</fullName>
        <label>Last Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Latest_Phasing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latest Phasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Modify_BY__c</fullName>
        <label>Modify BY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_End_Date__c</fullName>
        <label>PO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Start_Date__c</fullName>
        <label>PO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO__c</fullName>
        <label>PO</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>PO Receipt Phasing</relationshipLabel>
        <relationshipName>PO_Receipt_Phasing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PO Receipt Phasing</label>
    <nameField>
        <displayFormat>RP-{YY}{000000}</displayFormat>
        <label>PO Receipt Phasing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Receipt Phasing</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_PO_Receipt_Phasing</fullName>
        <active>true</active>
        <label>CN PO Receipt Phasing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>